# my-lm

./: .editorconfig  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json  requirements.txt  setup.bat  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/skills/: VISIO.md
.github/skills/adr-generator/: SKILL.md
datasets/: train.jsonl
datasets/motogp/: train.jsonl
datasets/motogp/raw/27-04-2026/: 608_2_1777477486.json
docs/: architecture.md  bookmind.md  cli.md  features.md  installation.md  packaging.md
docs/diagrams/: architecture.md  architecture.vsdx  architecture.yaml
scripts/: agent_bench.py  batch_generate.py  book_bridge.py  book_recommend.py  face_detailer.py  face_swap.py  generate_image.py  gguf_bridge.py  image_bridge.py  image_describe.py  llm_bridge.py  merge_lora.py  model_download.py  motogp_build_dataset.py  motogp_poll.py  qwen_inference.py  train_bridge.py  train_qlora.py  upscaler.py  vsdxgen.py
scripts/templates/: vsdxgen.vstx  vsdxgen_template.vstx
src/mylm/: __init__.py
src/mylm/imaging/: __init__.py  face_detailer.py  nsfw_segmenter.py  upscaler.py
src/mylm/io/: __init__.py  jsonl.py
src/mylm/rag/: __init__.py  db.py  goodreads.py
tests/: conftest.py  test_agent_bench.py  test_jsonl.py  test_rag_helpers.py
tests/bench_fixtures/: buggy_code.py  research_doc_1.txt  research_doc_2.txt  research_doc_3.txt  test_buggy.py
ui/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  webpack.renderer.js
ui/src/main/: benchmarkBridge.ts  bookBridge.ts  configStore.ts  historyStore.ts  imageBridge.ts  llmBridge.ts  main.ts  modelCatalog.ts  modelManager.ts  preload.ts  promptStore.ts  trainBridge.ts
ui/src/renderer/: app.ts  global.d.ts  index.html
