[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mylm"
version = "0.1.0"
description = "My-LM — local LLM, image generation, and QLoRA training playground"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Josh Lavely", email = "contact@lavely.io" }]
keywords = ["llm", "sdxl", "qlora", "rag", "local-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Runtime dependencies are pinned in requirements.txt for reproducibility,
# since PyTorch needs the CUDA index URL and can't be expressed cleanly here.
# `pip install -e .` installs the package skeleton; use requirements.txt for deps.
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
]
rag = [
    "pymongo>=4.6",
    "python-dotenv>=1.0",
    "sentence-transformers>=2.7",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.urls]
Homepage = "https://github.com/lavely/my-lm"
Documentation = "https://github.com/lavely/my-lm/tree/main/docs"
Issues = "https://github.com/lavely/my-lm/issues"
Source = "https://github.com/lavely/my-lm"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mylm = ["py.typed"]

# ── Tooling ──────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line length (handled by black)
    "B008", # function calls in defaults (common in argparse / FastAPI)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]  # entry-point sys.path tweaks happen before imports

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
ignore_missing_imports = true  # ML libs don't all ship stubs
files = ["src/mylm"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]
